--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,18 +17,14 @@
     <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-nav p-4">
         <div class="main-nav">
+        <ul>
             <a class ="selected-tab" href="home">Home</a>
             <a href="about">About</a>
             <a href="officer-team">Officer Team</a>
-            <div class="drop">
-                <a href="general-meetings">General Meetings</a>
-                <div class="dropdown-content">
-                    <a href="outreach">Outreach</a>
-                    <a href="social-events">Social Events</a>
-                    <a href="career-development">Career Development</a>
-                </div>
-            </div>
+            <a href="general-meetings">General Meetings</a>
             <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
+            <a href="#">Login</a>
+        </ul>
         </div>
     </div>
     </div>
@@ -46,8 +42,7 @@
     <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-nav p-4">
-        <h5 class="text-white h4"><a href="admin">Admin</a></h5>
-        <h5 class="text-white h4"><a href="#">Member</a></h5>
+        <h5 class="text-white h4"><a href="#">Login</a></h5>
         </div>
     </div>
     <nav class="navbar navbar-dark bg-nav">
@@ -72,6 +67,9 @@
         <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
     </div>
 </div>
+
+
+
 <div class= "page-body">
     <div class= "page-heading">
         <div class = "home-img" align="center">
@@ -104,7 +102,7 @@
 
     
 </div>
-</body>
+
 
 <footer>
         <div class ="page-footer">
@@ -117,5 +115,7 @@
             <p> 2022 by Texas A&M American Chemical Society Student Affiliate Chapter.</p>
         </div>
 </footer>
+
+</body>
 
 </html>
