--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -63,7 +63,9 @@
             <a href="social-events">Social Events</a>
             <a href="career-development">Career Development</a>
         </div>
+        
         </div>
+        <%= link_to "Calendar", meetings_path %>
         <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
     </div>
 </div>
