--- a/app/views/pages/general-meetings.html.erb
+++ b/app/views/pages/general-meetings.html.erb
@@ -91,7 +91,9 @@
         </dl>
 
     </div>
-
+<h1>
+<%= link_to "Calendar", calendarevents_path %>
+</h1>
 
     <footer class="page-footer">
         <div class = "sub">
