--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -9,6 +9,7 @@
       <th>Date</th>
       <th>Name</th>
       <th>Description</th>
+      <th>Points</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= meeting.date %></td>
         <td><%= meeting.name %></td>
         <td><%= meeting.description %></td>
+        <td><%= meeting.pointval %></td>
         <td><%= link_to 'Show', meeting %></td>
         <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
         <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
