--- a/app/views/members/admin.html.erb
+++ b/app/views/members/admin.html.erb
@@ -33,22 +33,24 @@
 <table>
   <thead>
     <tr>
-      <th>Student id</th>
-      <th>First</th>
       <th>Last</th>
+      <th>First</th>
+      <th>Email</th>
+      <th>Student id</th>
+      <th>Admin</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @members.each do |member| %>
+    <% @users.each do |user| %>
       <tr>
-        <td><%= member.student_ID %></td>
-        <td><%= member.first %></td>
-        <td><%= member.last %></td>
-        <td><%= link_to 'Show', member %></td>
-        <td><%= link_to 'Edit', edit_member_path(member) %></td>
-        <td><%= link_to 'Destroy', member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= user.last %></td>
+        <td><%= user.first %></td>
+        <td><%= user.email %></td>
+        <td><%= user.student_id %></td>
+        <td><%= user.admin %></td>
+        <td><%= link_to 'Edit', edit_user_registration_path(user) %></td>
       </tr>
     <% end %>
   </tbody>
