--- a/app/views/pages/career-development.html.erb
+++ b/app/views/pages/career-development.html.erb
@@ -18,7 +18,7 @@
             <a href="officer-team">Officer Team</a>
             <a href="general-meetings">General Meetings</a>
             <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
-            <a href="#">Login</a>
+            <a href="login">Login</a>
         </ul>
         </div>
     </div>
@@ -37,7 +37,7 @@
     <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-nav p-4">
-        <h5 class="text-white h4"><a href="#">Login</a></h5>
+        <h5 class="text-white h4"><a href="login">Login</a></h5>
         </div>
     </div>
     <nav class="navbar navbar-dark bg-nav">
