--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,19 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edit <%= resource.first%> <%= resource.last%></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+  <% if current_user && current_user.admin %>
+  <div class="field">
+    <%= f.label :student_id %> ID<br />
+    <%= f.number_field :student_id %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :Admin %><br />
+    <%= f.check_box :admin %>
+  </div>
+  <% end %>
+
 
   <div class="field">
     <%= f.label :email %><br />
@@ -36,8 +48,7 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "Delete Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
