--- a/app/views/acs_admins/admin.html.erb
+++ b/app/views/acs_admins/admin.html.erb
@@ -31,34 +31,34 @@
 
 <table>
   <thead>
-    <tr>
-      <th>Admin id</th>
-      <th>Student id</th>
-      <th>Username</th>
-      <th>Password</th>
-      <th>Position</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Last</th>
+    <th>First</th>
+    <th>Email</th>
+    <th>Student id</th>
+    <th>Admin</th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @acs_admins.each do |acs_admin| %>
-      <tr>
-        <td><%= acs_admin.admin_ID %></td>
-        <td><%= acs_admin.student_ID %></td>
-        <td><%= acs_admin.username %></td>
-        <td><%= acs_admin.password %></td>
-        <td><%= acs_admin.position %></td>
-        <td><%= link_to 'Show', acs_admin %></td>
-        <td><%= link_to 'Edit', edit_acs_admin_path(acs_admin) %></td>
-        <td><%= link_to 'Destroy', acs_admin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% @users.each do |user| %>
+    <tr>
+      <td><%= user.last %></td>
+      <td><%= user.first %></td>
+      <td><%= user.email %></td>
+      <td><%= user.student_id %></td>
+      <td><%= form_for(user, as: user, url: registration_path(user), html: { method: :put }) do |f| %>
+        <div class="field">
+        <%= f.check_box :admin %>
+        </div>
+      <% end %></td>
+    </tr>
+  <% end %>
   </tbody>
+</table>
 </table>
 
 <br>
-
-<%= link_to 'New Acs Admin', new_acs_admin_path %>
 
 </center>
