dues database linked to members, registration error fixed

--- a/app/views/adminportal/admin.html.erb
+++ b/app/views/adminportal/admin.html.erb
@@ -79,6 +79,16 @@
             </div>
         </div>
     </div>
+    <div class="col-sm">
+        <div onclick="window.location.href = 'admin/dues';" class="card" style="width: 18rem; margin-top: 30px;">
+        <%= image_tag("ACS-dues.png", width: "100%") %>
+            <div class="card-body text-muted">
+            <center>
+            <p class="card-text">View & manage dues</p>
+            </center>
+            </div>
+        </div>
+    </div>
   </div>
 </div>
 
