--- a/app/views/dues/admin.html.erb
+++ b/app/views/dues/admin.html.erb
@@ -36,7 +36,7 @@
     <th>First</th>
     <th>Email</th>
     <th>Student id</th>
-    <th>Admin</th>
+    <th>Paid</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -48,13 +48,37 @@
       <td><%= user.first %></td>
       <td><%= user.email %></td>
       <td><%= user.student_id %></td>
-      <td><%= form_for(user, as: user, url: registration_path(user), html: { method: :put }) do |f| %>
-        <div class="field">
-        <%= f.check_box :admin %>
+      <% n  = 0 %>
+      <% @dues.each do |due| %>
+        <% if due.student_ID == user.student_id %>
+        <td><%= due.paid %></td>
+        <% n  = 1 %>
+        <% end %>  
+      <% end %>
+      <% if n ==0%>
+      <td>False</td>
+       <td>
+       <% due = @due %>
+        <%= form_with(model: due) do |form| %>
+          <div class="field">
+          <%= form.hidden_field :student_ID, :value => user.student_id  %>
         </div>
-      <% end %></td>
+
+        <div class="field">
+          <%= form.label :paid %>
+          <%= form.check_box :paid %>
+        </div>
+        </td>
+        <td>
+        <div class="actions">
+          <%= form.submit %>
+        </div>
+        </td>
+      <% end %> 
+        <% end %>
     </tr>
   <% end %>
+  <%= link_to "Reset all", remove_all_dues_path, :method => :get %>
   </tbody>
 </table>
 </table>
