--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
 
   <body>
     <%= yield %>
+    <center>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    </center>
   </body>
 </html>
