--- a/app/views/members/admin.html.erb
+++ b/app/views/members/admin.html.erb
@@ -37,6 +37,7 @@
       <th>First</th>
       <th>Email</th>
       <th>Student id</th>
+      <th>Dues Paid</th>
       <th>Admin</th>
       <th colspan="3"></th>
     </tr>
@@ -49,6 +50,7 @@
         <td><%= user.first %></td>
         <td><%= user.email %></td>
         <td><%= user.student_id %></td>
+        <td><%= user.dues %></td>
         <td><%= user.admin %></td>
         <td><%= link_to 'Edit', edit_user_registration_path(user) %></td>
       </tr>
