uploaded new pngs for member portal

--- a/app/views/dues/admin.html.erb
+++ b/app/views/dues/admin.html.erb
@@ -27,7 +27,7 @@
 <center>
 <p id="notice"><%= notice %></p>
 
-<h1>Manage Admin Access</h1>
+<h1>Manage Dues</h1>
 
 <table>
   <thead>
@@ -78,9 +78,9 @@
         <% end %>
     </tr>
   <% end %>
-  <%= link_to "Reset all", remove_all_dues_path, :method => :get %>
   </tbody>
 </table>
+<%= link_to "Reset all", remove_all_dues_path, :method => :get %>
 </table>
 
 <br>
