--- a/app/views/dues/admin.html.erb
+++ b/app/views/dues/admin.html.erb
@@ -80,9 +80,9 @@
   <% end %>
   </tbody>
 </table>
-<%= link_to "Reset all", remove_all_dues_path, :method => :get %>
+
 </table>
 
 <br>
-
+<%= button_to "Reset all", remove_all_dues_path, :method => :get, data: { confirm: 'Are you sure you want to reset all member dues?' } %>
 </center>
