--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,7 @@
-<h2>Edit <%= resource.first%> <%= resource.last%></h2>
+<h2>Edit <%= @user.first%> <%= @user.last%></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <% if current_user && current_user.admin && resource.email != "adm@n"%>
+<%= form_for(@user) do |f| %>
+  <% if current_user && current_user.admin  && @user.email != "adm@n"%>
   <div class="field">
     <%= f.label :student_id %> ID<br />
     <%= f.number_field :student_id %>
@@ -20,9 +19,6 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
@@ -46,9 +42,11 @@
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
+
 <% end %>
 
 
-<p><%= button_to "Delete Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<td><%= button_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure you want to delete this member?' } %></td>
+
 
 <%= link_to "Back", :back %>
