logout button added

--- a/app/views/adminportal/admin.html.erb
+++ b/app/views/adminportal/admin.html.erb
@@ -20,8 +20,15 @@
       <li class="nav-item ">
         <a class="nav-link" href="home">Home<span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="logout">Logout<span class="sr-only">(current)</span></a>
+      </li>
   </span>
 </nav>
+
+<center>
+    <p id="notice"><%= notice %></p>
+</center>
 
 <center>
 <div class="container">
