--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -71,6 +71,9 @@
 
 
 <div class= "page-body">
+    <center>
+    <p id="notice"><%= notice %></p>
+    </center>
     <div class= "page-heading">
         <div class = "home-img" align="center">
             <%= image_tag("ACS-Home1.png", width: "100%") %>
