--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -4,6 +4,12 @@
 
 <h1>Members</h1>
 
+<%= form_tag members_path, :method => "get" do %>
+  <%= label_tag(:search, "Enter student ID:") %>
+  <%= text_field_tag :search, params[:search] %>
+  <%= submit_tag("Search", :name => nil)%>
+<% end %>
+
 <table>
   <thead>
     <tr>
