--- a/app/views/meetings/m.html.erb
+++ b/app/views/meetings/m.html.erb
@@ -28,7 +28,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Meetings</h1>
+<h1>Meeting Sign In</h1>
 
 <table>
   <thead>
@@ -37,44 +37,56 @@
       <th>Date</th>
       <th>Name</th>
       <th>Description</th>
-      <th>Active</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+    <p>Date/Time: <span id="date"></span></p><script>n =  new Date(); 
+    y = n.getFullYear();
+    m = n.getMonth() + 1;
+    d = n.getDate();
+    document.getElementById("date").innerHTML = y + "-" + m + "-" + d; </script> 
     <% @meetings.each do |meeting| %>
-      <tr>
-        <td><%= meeting.meeting_ID %></td>
-        <td><%= meeting.date %></td>
-        <td><%= meeting.name %></td>
-        <td><%= meeting.description %></td>
-        <td><%= form_with(model: meeting) do |form| %>
-
-          <div class="field">
-            <%= form.check_box :active %>
-          </div>
-          </td>
+      <% if meeting.active %>
+        <tr>
+          <td><%= meeting.meeting_ID %></td>
+          <td><%= meeting.date %></td>
+          <td><%= meeting.name %></td>
+          <td><%= meeting.description %></td>
+          <td><%= meeting.pointval %></td>
           <td>
-          <div class="actions">
-            <%= form.submit "update" %>
-          </div>
-          </td>
-        <% end %>
-
-
-        <td><%= link_to 'Show', meeting %></td>
-        <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
-        <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        
-      </tr>
+          <%= form_with(model: @attendance) do |form| %>
+              <div class="field">
+              <%= form.hidden_field :student_ID, :value => current_user.student_id  %>
+              </div>
+              <div class="field">
+                <%= form.hidden_field :meeting_ID, :value => meeting.meeting_ID  %>
+              </div>
+              </td>
+              <% n  = 0 %>
+            <% @attendances.each do |attendance| %>
+              <% if attendance.student_ID == current_user.student_id && meeting.meeting_ID == attendance.meeting_ID %>
+                <td>Signed in </td>
+                <% n  = 1 %>
+              <% end %>
+              <% end %> 
+              <% if n  == 0 %>
+              <td>
+            
+              <div class="actions">
+                <%= form.submit "Sign in" %>
+              </div>
+              </td>
+            <% end %> 
+          <% end %> 
+        </tr>
+      <% end %> 
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Meeting', new_meeting_path %>
 
 
 </center>
