--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -21,21 +21,22 @@
 </p>
 
 <p>
-  <strong>Points:</strong>
-  <%= @meeting.pointval %>
-</p>
-
-<p>
 Meeting Attendees <br>
 <% total_attendees = 0 %>
   <table>
   <tr> <td>Name</td> </tr>
-    <% @meeting.member_meetings.each do  |membermeeting| %>
-      <tr> 
-        <td><%= Member.where(id: membermeeting.member_id).last.first  %>  <%= Member.where(id: membermeeting.member_id).last.last  %> </td>
-      </tr> 
-      <% total_attendees += 1 %>
-  <%end%>
+    <% @attendances.each do  |attendance| %>
+      <% if attendance.meeting_ID == @meeting.meeting_ID %>
+        <% @users.each do  |user| %>
+          <% if attendance.student_ID == user.student_id %>
+            <tr> 
+              <td><%= user.first  %> <%= user.last  %></td>
+              <% total_attendees += 1 %>
+            </tr> 
+          <% end %>
+        <% end %>
+      <% end %>
+    <% end %>
   </table> 
  Total Attendees:  <%= total_attendees %>
 </p>
