--- a/app/views/members/admin.html.erb
+++ b/app/views/members/admin.html.erb
@@ -37,7 +37,7 @@
       <th>First</th>
       <th>Email</th>
       <th>Student id</th>
-      <th>Admin</th>
+      <th>Points</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -49,7 +49,15 @@
         <td><%= user.first %></td>
         <td><%= user.email %></td>
         <td><%= user.student_id %></td>
-        <td><%= user.admin %></td>
+        <td>
+        <% n  = 0 %>
+        <% @attendances.each do |attendance| %>
+            <% if attendance.student_ID == user.student_id %>
+                <% n  = n+1 %>
+            <% end %>  
+        <% end %>
+        <%= n %>
+        </td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
       </tr>
     <% end %>
