--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -1,11 +1,6 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Meeting id:</strong>
-  <%= @meeting.meeting_ID %>
-</p>
-
-<p>
   <strong>Date:</strong>
   <%= @meeting.date %>
 </p>
@@ -21,16 +16,16 @@
 </p>
 
 <p>
-Meeting Attendees <br>
+<b>Meeting Attendees</b> <br>
 <% total_attendees = 0 %>
   <table>
-  <tr> <td>Name</td> </tr>
+  <tr> <td></td> </tr>
     <% @attendances.each do  |attendance| %>
       <% if attendance.meeting_ID == @meeting.meeting_ID %>
         <% @users.each do  |user| %>
           <% if attendance.student_ID == user.student_id %>
             <tr> 
-              <td><%= user.first  %> <%= user.last  %></td>
+              <td> - <%= user.student_id %></td>  <td> | <%= user.first  %> <%= user.last  %></td> <td><%= link_to 'Remove', attendance, method: :delete, data: { confirm: 'Are you sure?' } %></td>  
               <% total_attendees += 1 %>
             </tr> 
           <% end %>
@@ -38,7 +33,24 @@ Meeting Attendees <br>
       <% end %>
     <% end %>
   </table> 
- Total Attendees:  <%= total_attendees %>
+  <b>Total Attendees: </b> <% total_attendees%> 
+
+   <%= form_with(model: @attendance) do |form| %>
+    <th>
+    <div class="field">
+    <%= form.label :student_ID %>
+    <%= form.select :student_ID, User.order(:last).map { |user| [user.last + ', ' + user.first, user.student_id] }, include_blank: true %>
+    </div></th> <th>
+    <div class="field">
+      <%= form.hidden_field :meeting_ID, :value => @meeting.meeting_ID  %>
+    </div>
+    
+    <div class="actions">
+      <%= form.submit "Add Member" %>
+    </div>
+    </th> 
+<% end %> 
+
 </p>
 
 
