--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -11,19 +11,21 @@
     </div>
   <% end %>
 
-
-
-  <% max = 1%>
-  <% count = 1%>
-  <% while count != 0 %>
-    <% @meetings.each do  |meeting| %>
-      <%count = 0 %>
-      <% if meeting.meeting_ID == max %>
-        <% max = max+1%>
-        <%count = 1 %>
+  <% max = 0%>        
+  <% if Meeting.count != 0 %>
+    <% max = 1%>
+    <% count = 1%>
+    <% while count != 0 %>
+      <% @meetings.each do  |meeting| %>
+        <%count = 0 %>
+        <% if meeting.meeting_ID == max %>
+          <% max = max+1%>
+          <%count = 1 %>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
+
 
   <div class="field">
     <%= form.hidden_field :meeting_ID, :value => max  %>
