--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -48,7 +48,8 @@
   </div>
 <% end %>
 
-
+<% if current_user && resource.email != "adm@n"%>
 <p><%= button_to "Delete Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<% end %>
 
 <%= link_to "Back", :back %>
