--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,46 +1,66 @@
-<h2>Sign up</h2>
+<%= stylesheet_link_tag "registration.css" %>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<section class="vh-auto bg-image">
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+          <div class="card" style="border-radius: 15px; background: rgb(255, 255, 255);">
+            <div class="card-body p-5">
+              <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-  <div class="field">
-    <%= f.label :first %> Name<br />
-    <%= f.text_field :first, autofocus: true, autocomplete: "first" %>
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                
+
+                <div class="form-outline mb-4">
+                  <%= f.text_field :first, autofocus: true, autocomplete: "first", id: "form3Example1cg", class: "form-control form-control-lg" %>
+                  <label class="form-label" for="form3Example1cg">First Name</label>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <%= f.text_field :last, autocomplete: "last", id: "form3Example1cg", class: "form-control form-control-lg" %>
+                  <label class="form-label" for="form3Example1cg">Last Name</label>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <%= f.email_field :email, autocomplete: "email", id: "form3Example3cg", class: "form-control form-control-lg" %>
+                  <label class="form-label" for="form3Example3cg">Your Email</label>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <%= f.number_field :student_id, autocomplete: "student_id", id: "form3Example3cg", class: "form-control form-control-lg" %>
+                  <label class="form-label" for="form3Example3cg">Student ID</label>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <% if @minimum_password_length %>
+                  <em>(<%= @minimum_password_length %> characters minimum)</em>
+                  <% end %><br />
+                  <%= f.password_field :password, autocomplete: "new-password", id: "form3Example4cg", class: "form-control form-control-lg" %>
+                  <label class="form-label" for="form3Example4cg">Password</label>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <%= f.password_field :password_confirmation, autocomplete: "new-password", id: "form3Example4cg", class: "form-control form-control-lg" %>
+                  <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+                </div>
+
+                <div class="d-flex justify-content-center">
+                  <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
+                </div>
+
+                <p class="text-center text-muted mt-5 mb-0">Have already an account? <%= link_to "Log in", new_session_path(resource_name) %><br /></p>
+
+              <% end %>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :last %> Name<br />
-    <%= f.text_field :last, autocomplete: "last" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :student_id %> ID<br />
-    <%= f.number_field :student_id, autocomplete: "student_id" %>
-  </div>
+</section>
 
 
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
