added html for password reset

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -50,7 +50,7 @@
                   <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
                 </div>
 
-                <p class="text-center text-muted mt-5 mb-0">Have already an account? <%= link_to "Log in", new_session_path(resource_name) %><br /></p>
+                <p class="text-center text-muted mt-5 mb-0">Already an account? <%= link_to "Log in", new_session_path(resource_name) %><br /></p>
 
               <% end %>
 
