--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,38 @@
-<h2>Forgot your password?</h2>
+<%= stylesheet_link_tag "registration.css" %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<section class="vh-100 bg-image">
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+          <div class="card" style="border-radius: 15px; background: rgb(255, 255, 255);">
+            <div class="card-body p-5">
+              <h2 class="text-uppercase text-center mb-5">Reset Password</h2>
+
+              <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+
+                <div class="form-outline mb-4">
+                  <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "form3Example1cg", class: "form-control form-control-lg" %>
+                  <label class="form-label" for="form3Example1cg">Email</label>
+                </div>
+
+
+                <div class="d-flex justify-content-center">
+                  <%= f.submit "Send me reset password instructions", class: "btn btn-primary btn-lg" %>
+                </div>
+
+                <p class="text-center text-muted mt-5 mb-0">Already an account? <%= link_to "Log in", new_session_path(resource_name) %></p>
+                <p class="text-center text-muted mt-5 mb-0">Don't have an account? <%= link_to "Sign up", new_registration_path(resource_name) %>
+
+              <% end %>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</section>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
