--- a/app/views/memberportal/member.html.erb
+++ b/app/views/memberportal/member.html.erb
@@ -13,13 +13,16 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="member">ACS Member Portal</a>
+    <a class="navbar-brand" href="member"><%= current_user.first%> <%= current_user.last%> | ACS Member Portal</a>
   </div>
   <span class="navbar-text">
   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item ">
-        <a class="nav-link" href="home">Home<span class="sr-only">(current)</span></a>
-      </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="home">Home<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="logout">Logout<span class="sr-only">(current)</span></a>
+    </li>
   </span>
 </nav>
 
@@ -31,17 +34,27 @@
         <%= image_tag("ACS-calendar.png", width: "100%") %>
             <div class="card-body text-muted">
             <center>
-            <p class="card-text">View & manage Calendar</p>
+            <p class="card-text">View Calendar</p>
             </center>
             </div>
         </div>
+    </div>
+    <div class="col-sm">
+      <div onclick="window.location.href = 'member/meetings';" class="card" style="width: 18rem; margin-top: 30px;">
+      <%= image_tag("ACS-members.png", width: "100%") %>
+          <div class="card-body text-muted">
+          <center>
+          <p class="card-text">View Meetings</p>
+          </center>
+          </div>
+      </div>
     </div>
     <div class="col-sm">
         <div onclick="window.location.href = 'm/profile';" class="card" style="width: 18rem; margin-top: 30px;">
         <%= image_tag("ACS-admins.png", width: "100%") %>
             <div class="card-body text-muted">
             <center>
-            <p class="card-text">View & manage admin access</p>
+            <p class="card-text">My Profile</p>
             </center>
             </div>
         </div>
