--- a/app/views/meetings/m.html.erb
+++ b/app/views/meetings/m.html.erb
@@ -13,12 +13,12 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="../admin">ACS Admin Portal</a>
+    <a class="navbar-brand" href="../member"><%= current_user.first%> <%= current_user.last%> | ACS Member Portal</a>
   </div>
   <span class="navbar-text">
   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item ">
-        <a class="nav-link" href="../admin">Back<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="../member">Back<span class="sr-only">(current)</span></a>
       </li>
   </span>
 </nav>
