--- a/app/views/memberportal/member.html.erb
+++ b/app/views/memberportal/member.html.erb
@@ -20,8 +20,8 @@
     <li class="nav-item ">
       <a class="nav-link" href="home">Home<span class="sr-only">(current)</span></a>
     </li>
-    <li class="nav-item ">
-      <a class="nav-link" href="logout">Logout<span class="sr-only">(current)</span></a>
+    <li class="nav-item "> 
+      <a class="nav-link" href="m/profile">My Profile<span class="sr-only">(current)</span></a>
     </li>
   </span>
 </nav>
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="col-sm">
-      <div onclick="window.location.href = 'member/meetings';" class="card" style="width: 18rem; margin-top: 30px;">
+      <div onclick="window.location.href = 'm/attendance';" class="card" style="width: 18rem; margin-top: 30px;">
       <%= image_tag("ACS-members.png", width: "100%") %>
           <div class="card-body text-muted">
           <center>
