--- a/app/views/calendarevents/admin.html.erb
+++ b/app/views/calendarevents/admin.html.erb
@@ -33,39 +33,53 @@
 <table>
   <thead>
     <tr>
+      <th>Date</th>
       <th>Name</th>
       <th>Description</th>
-      <th>Start time</th>
-      <th>End time</th>
+      <th>Active</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @calendarevents.each do |calendarevent| %>
-      <tr>
-        <td><%= calendarevent.name %></td>
-        <td><%= calendarevent.description %></td>
-        <td><%= calendarevent.start_time %></td>
-        <td><%= calendarevent.end_time %></td>
-        <td><%= link_to 'Show', calendarevent %></td>
-        <td><%= link_to 'Edit', edit_calendarevent_path(calendarevent) %></td>
-        <td><%= link_to 'Destroy', calendarevent, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% @meetings.each do |meeting| %>
+    <tr>
+      <td><%= meeting.date %></td>
+      <td><%= meeting.name %></td>
+      <td><%= meeting.description %></td>
+      <td><%= form_with(model: meeting) do |form| %>
+
+        <div class="field">
+          <%= form.check_box :active %>
+        </div>
+        </td>
+        <td>
+        <div class="actions">
+          <%= form.submit "update" %>
+        </div>
+        </td>
+      <% end %>
+
+
+      <td><%= link_to 'Show', meeting %></td>
+      <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
+      <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      
+    </tr>
+  <% end %>
   </tbody>
 </table>
 
 
-<%= month_calendar(events: @calendarevents) do |date, calendarevents| %>
+<%= month_calendar(events: @meetings) do |date, meetings| %>
         <div class="day">    
             <%= date.day %>
             
         </div>
-        <% calendarevents.each do |calendarevent| %>
+        <% meetings.each do |meeting| %>
             <div class="card-header">
             <div class="card-title">
-                <%= calendarevent.name %>
+                <%= meeting.name %>
                 </div>
             </div>
             <% end %>
@@ -75,8 +89,8 @@
 
 <br>
 
-<%= link_to 'New Calendarevent', new_calendarevent_path %>
-<%= link_to 'Home', home_path %>
+<%= link_to 'New Meeting', new_meeting_path %>
+
 </div>
 
 </center>
