Modified Home Page to follow same Nav bar style as Member Portal

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,16 +40,21 @@
 </div>
 <div class = "landscape-navs">
     <div class="pos-f-t">
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-nav p-4">
-        <h5 class="text-white h4"><a href="login">Login</a></h5>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-nav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="../home">American Chemical Society | Texas A&M</a>
     </div>
-    <nav class="navbar navbar-dark bg-nav">
-        <button class="member-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-        <p>Members</p>
-        </button>
+    <span class="navbar-text">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item ">
+        <a class="nav-link" href="../login">My Account&nbsp&nbsp<span class="sr-only">(current)</span></a>
+      </li>
+    </span>
     </nav>
+
     </div>
 
     <div class="main-nav">
