Single page Member portal, but meeting sign in needs to be looked at, does not work anymore

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -8,17 +8,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/js/bootstrap.min.js" integrity="sha512-UR25UO94eTnCVwjbXozyeVd6ZqpaAE9naiEUBK/A+QDbfSTQFhPGj5lOR6d8tsgbBk84Ggb5A3EkjsOgPRPcKA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-nav">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="../member">ACS Member Portal</a>
+    <a class="navbar-brand" href="../home">American Chemical Society | Texas A&M</a>
   </div>
   <span class="navbar-text">
   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
     <li class="nav-item ">
-      <a class="nav-link" href="../home">Home<span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="../member"><%= current_user.first%> <%= current_user.last%> | My Meetings and Events<span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item ">
       <a class="nav-link" href="../logout">Logout<span class="sr-only">(current)</span></a>
