--- a/app/views/memberportal/member.html.erb
+++ b/app/views/memberportal/member.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Member Portal | ACS Texas A&M</title>
+    <title>My Meetings and Events | ACS Texas A&M</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/css/bootstrap.min.css" integrity="sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -8,59 +8,133 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/js/bootstrap.min.js" integrity="sha512-UR25UO94eTnCVwjbXozyeVd6ZqpaAE9naiEUBK/A+QDbfSTQFhPGj5lOR6d8tsgbBk84Ggb5A3EkjsOgPRPcKA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-nav">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="member"><%= current_user.first%> <%= current_user.last%> | ACS Member Portal</a>
+    <a class="navbar-brand" href="home">American Chemical Society | Texas A&M</a>
   </div>
   <span class="navbar-text">
   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-    <li class="nav-item ">
-      <a class="nav-link" href="home">Home<span class="sr-only">(current)</span></a>
-    </li>
     <li class="nav-item "> 
-      <a class="nav-link" href="m/profile">My Profile<span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="m/profile"><%= current_user.first%> <%= current_user.last%> | My Profile<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="../logout">Logout<span class="sr-only">(current)</span></a>
     </li>
   </span>
 </nav>
 
 <center>
+
+<p id="notice"><%= notice %></p>
 <div class="container">
-  <div class="row">
-    <div class="col-sm">
-        <div onclick="window.location.href = 'member/calendar';" class="card" style="width: 18rem; margin-top: 30px;">
-        <%= image_tag("ACS-calendar.png", width: "100%") %>
-            <div class="card-body text-muted">
-            <center>
-            <p class="card-text">View Calendar</p>
-            </center>
-            </div>
+<h1>Calendar Events</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name&nbsp</th>
+      <th>Description&nbsp</th>
+      <th>Start Time&nbsp</th>
+      <th>End Time</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @calendarevents.each do |calendarevent| %>
+      <tr>
+        <td><%= calendarevent.name %></td>
+        <td><%= calendarevent.description %></td>
+        <td><%= calendarevent.start_time %></td>
+        <td><%= calendarevent.end_time %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%= month_calendar(events: @calendarevents) do |date, calendarevents| %>
+        <div class="day">    
+            <%= date.day %>
+            
         </div>
-    </div>
-    <div class="col-sm">
-      <div onclick="window.location.href = 'm/attendance';" class="card" style="width: 18rem; margin-top: 30px;">
-      <%= image_tag("ACS-members.png", width: "100%") %>
-          <div class="card-body text-muted">
-          <center>
-          <p class="card-text">View Meetings</p>
-          </center>
-          </div>
-      </div>
-    </div>
-    <div class="col-sm">
-        <div onclick="window.location.href = 'm/profile';" class="card" style="width: 18rem; margin-top: 30px;">
-        <%= image_tag("ACS-admins.png", width: "100%") %>
-            <div class="card-body text-muted">
-            <center>
-            <p class="card-text">My Profile</p>
-            </center>
+        <% calendarevents.each do |calendarevent| %>
+            <div class="card-header">
+            <div class="card-title">
+                <%= calendarevent.name %>
+                </div>
             </div>
-        </div>
-    </div>
-  </div>
+            <% end %>
+        <% end %>
+<br>
+
 </div>
+
+<br>
+
+<p id="notice"><%= notice %></p>
+
+<h1>Meeting Sign In</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Meeting ID&nbsp</th>
+      <th>Date&nbsp</th>
+      <th>Name&nbsp</th>
+      <th>Description</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <p>Date/Time: <span id="date"></span></p><script>n =  new Date(); 
+    y = n.getFullYear();
+    m = n.getMonth() + 1;
+    d = n.getDate();
+    document.getElementById("date").innerHTML = y + "-" + m + "-" + d; </script> 
+    <% @meetings.each do |meeting| %>
+      <% if meeting.active %>
+        <tr>
+          <td><%= meeting.meeting_ID %></td>
+          <td><%= meeting.date %></td>
+          <td><%= meeting.name %></td>
+          <td><%= meeting.description %></td>
+          <td><%= meeting.pointval %></td>
+          <td>
+          <%= form_with(model: @attendance) do |form| %>
+              <div class="field">
+              <%= form.hidden_field :student_ID, :value => current_user.student_id  %>
+              </div>
+              <div class="field">
+                <%= form.hidden_field :meeting_ID, :value => meeting.meeting_ID  %>
+              </div>
+              </td>
+              <% n  = 0 %>
+            <% @attendances.each do |attendance| %>
+              <% if attendance.student_ID == current_user.student_id && meeting.meeting_ID == attendance.meeting_ID %>
+                <td>Signed in </td>
+                <% n  = 1 %>
+              <% end %>
+              <% end %> 
+              <% if n  == 0 %>
+              <td>
+            
+              <div class="actions">
+                <%= form.submit "Sign in" %>
+              </div>
+              </td>
+            <% end %> 
+          <% end %> 
+        </tr>
+      <% end %> 
+    <% end %>
+  </tbody>
+</table>
+
+<br>
 
 
 </center>
