Modified how the Admin portal redirected to different urls

--- a/app/views/calendarevents/edit.html.erb
+++ b/app/views/calendarevents/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', calendarevent: @calendarevent %>
 
 <%= link_to 'Show', @calendarevent %> |
-<%= link_to 'Back', calendarevents_path %>
+<%= link_to 'Back', admin_calendar_path %>
