--- a/app/views/calendarevents/new.html.erb
+++ b/app/views/calendarevents/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', calendarevent: @calendarevent %>
 
-<%= link_to 'Back', calendarevents_path %>
+<%= link_to 'Back', admin_calendar_path %>
