--- a/app/views/calendarevents/show.html.erb
+++ b/app/views/calendarevents/show.html.erb
@@ -21,4 +21,4 @@
 </p>
 
 <%= link_to 'Edit', edit_calendarevent_path(@calendarevent) %> |
-<%= link_to 'Back', calendarevents_path %>
+<%= link_to 'Back', admin_calendar_path %>
