--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -6,4 +6,4 @@
 </p>
 
 <%= link_to 'Edit', edit_email_path(@email) %> |
-<%= link_to 'Back', home_path %>
+<%= link_to 'Back', admin_emails_path %>
