--- a/app/views/adminportal/admin.html.erb
+++ b/app/views/adminportal/admin.html.erb
@@ -13,16 +13,16 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="admin">ACS Admin Portal</a>
+    <a class="navbar-brand" href="../admin">ACS Admin Portal</a>
   </div>
   <span class="navbar-text">
   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item ">
-        <a class="nav-link" href="home">Home<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="logout">Logout<span class="sr-only">(current)</span></a>
-      </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="../home">Home<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="../logout">Logout<span class="sr-only">(current)</span></a>
+    </li>
   </span>
 </nav>
 
