--- a/app/views/calendarevents/admin.html.erb
+++ b/app/views/calendarevents/admin.html.erb
@@ -17,26 +17,28 @@
   </div>
   <span class="navbar-text">
   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item ">
-        <a class="nav-link" href="../admin">Back<span class="sr-only">(current)</span></a>
-      </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="../home">Home<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="../logout">Logout<span class="sr-only">(current)</span></a>
+    </li>
   </span>
 </nav>
-
 
 <center>
 
 <p id="notice"><%= notice %></p>
 <div class="container">
-<h1>Calendarevents</h1>
+<h1>Calendar Events</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Start time</th>
-      <th>End time</th>
+      <th>Name&nbsp</th>
+      <th>Description&nbsp</th>
+      <th>Start Time&nbsp</th>
+      <th>End Time&nbsp</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -56,7 +58,6 @@
   </tbody>
 </table>
 
-
 <%= month_calendar(events: @calendarevents) do |date, calendarevents| %>
         <div class="day">    
             <%= date.day %>
@@ -71,12 +72,8 @@
             <% end %>
         <% end %>
 
-    
-
 <br>
 
-<%= link_to 'New Calendarevent', new_calendarevent_path %>
-<%= link_to 'Home', home_path %>
+<%= link_to 'New Calendar Event', new_calendarevent_path %>
 </div>
-
 </center>
