--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -55,4 +55,4 @@
 
 
 <%= link_to 'Edit', edit_meeting_path(@meeting) %> |
-<%= link_to 'Back', meetings_path %>
+<%= link_to 'Back', admin_meetings_path %>
