--- a/app/views/calendarevents/admin.html.erb
+++ b/app/views/calendarevents/admin.html.erb
@@ -36,9 +36,9 @@
   <thead>
     <tr>
       <th>Date</th>
+      <th>Time</th>
       <th>Name</th>
       <th>Description</th>
-      <th>Active</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -47,20 +47,9 @@
   <% @meetings.each do |meeting| %>
     <tr>
       <td><%= meeting.date %></td>
+      <td><%= meeting.hour %>:<%= meeting.minute %> <%= meeting.format %></td>
       <td><%= meeting.name %></td>
       <td><%= meeting.description %></td>
-      <td><%= form_with(model: meeting) do |form| %>
-
-        <div class="field">
-          <%= form.check_box :active %>
-        </div>
-        </td>
-        <td>
-        <div class="actions">
-          <%= form.submit "update" %>
-        </div>
-        </td>
-      <% end %>
 
 
       <td><%= link_to 'Show', meeting %></td>
@@ -81,7 +70,7 @@
         <% meetings.each do |meeting| %>
             <div class="card-header">
             <div class="card-title">
-                <%= meeting.name %>
+                <%= meeting.hour %>:<%= meeting.minute %> <%= meeting.format %> | <%= meeting.name %>
                 </div>
             </div>
             <% end %>
