--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -37,6 +37,15 @@
   </div>
 
   <div class="field">
+    <%= form.label :hour %>
+    <%= form.select :hour , options_for_select([1, 2, 3, 4, 5, 6,7,8,9,10,11,12])%>
+    <%= form.label :minute %>
+    <%= form.select  :minute, options_for_select([0,1,2,3,4,5,6,7,8,9,10, 11, 12, 13, 14, 15, 16, 17, 18, 19,20, 21, 22, 23, 24, 25, 26, 27, 28, 29,30, 31, 32, 33, 34, 35, 36, 37, 38, 39,40, 41, 42, 43, 44, 45, 46, 47, 48, 49,50, 51, 52, 53, 54, 55, 56, 57, 58, 59]) %>
+    <%= form.label :format %>
+    <%= form.select :format, options_for_select(["AM", "PM"])%>
+  </div>
+
+  <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
