--- a/app/views/meetings/admin.html.erb
+++ b/app/views/meetings/admin.html.erb
@@ -37,6 +37,7 @@
   <thead>
     <tr>
       <th>Date</th>
+      <th>Time</th>
       <th>Name</th>
       <th>Description</th>
       <th>Active</th>
@@ -48,6 +49,7 @@
     <% @meetings.each do |meeting| %>
       <tr>
         <td><%= meeting.date %></td>
+        <td><%= meeting.hour %>:<%= meeting.minute %> <%= meeting.format %></td>
         <td><%= meeting.name %></td>
         <td><%= meeting.description %></td>
         <td><%= form_with(model: meeting) do |form| %>
