--- a/app/views/memberportal/member.html.erb
+++ b/app/views/memberportal/member.html.erb
@@ -30,59 +30,21 @@
 
 <p id="notice"><%= notice %></p>
 <div class="container">
-<h1>Calendar Events</h1>
 
+<% count = 0 %>
+<% @meetings.each do |meeting| %>
+  <% if meeting.active %>
+  <% count = 1 %>
+  <%end%>
+  <%end%>
+<% if count == 0  %>
+  <p> [There are currently no active meetings] </p>
+<%else%>
 <table>
   <thead>
     <tr>
-      <th>Name&nbsp</th>
-      <th>Description&nbsp</th>
-      <th>Start Time&nbsp</th>
-      <th>End Time</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @calendarevents.each do |calendarevent| %>
-      <tr>
-        <td><%= calendarevent.name %></td>
-        <td><%= calendarevent.description %></td>
-        <td><%= calendarevent.start_time %></td>
-        <td><%= calendarevent.end_time %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= month_calendar(events: @calendarevents) do |date, calendarevents| %>
-        <div class="day">    
-            <%= date.day %>
-            
-        </div>
-        <% calendarevents.each do |calendarevent| %>
-            <div class="card-header">
-            <div class="card-title">
-                <%= calendarevent.name %>
-                </div>
-            </div>
-            <% end %>
-        <% end %>
-<br>
-
-</div>
-
-<br>
-
-<p id="notice"><%= notice %></p>
-
-<h1>Meeting Sign In</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Meeting ID&nbsp</th>
       <th>Date&nbsp</th>
+      <th>Time&nbsp</th>
       <th>Name&nbsp</th>
       <th>Description</th>
       <th colspan="3"></th>
@@ -98,11 +60,10 @@
     <% @meetings.each do |meeting| %>
       <% if meeting.active %>
         <tr>
-          <td><%= meeting.meeting_ID %></td>
           <td><%= meeting.date %></td>
+          <td><%= meeting.hour %>:<%= meeting.minute %> <%= meeting.format %></td>
           <td><%= meeting.name %></td>
           <td><%= meeting.description %></td>
-          <td><%= meeting.pointval %></td>
           <td>
           <%= form_with(model: @attendance) do |form| %>
               <div class="field">
@@ -133,6 +94,58 @@
     <% end %>
   </tbody>
 </table>
+<%end%>
+
+
+
+    
+<%= month_calendar(events: @meetings) do |date, meetings| %>
+        <div class="day">    
+            <%= date.day %>
+            
+        </div>
+        <% meetings.each do |meeting| %>
+            <div class="card-header">
+              <div class="card-title">
+                  <%= meeting.hour %>:<%= meeting.minute %> <%= meeting.format %> | <%= meeting.name %>
+                  </div>
+              </div>
+            <% end %>
+        <% end %>
+
+
+
+<br>
+
+<br>
+
+
+<table>
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+  <% @meetings.each do |meeting| %>
+    <tr>
+      <td><%= meeting.date %></td>
+      <td><%= meeting.name %></td>
+      <td><%= meeting.description %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<p id="notice"><%= notice %></p>
+
+
 
 <br>
 
