new nav, front end, back bugs fixed, added sign in from calender for memebers"

--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -1,5 +1,39 @@
+<!DOCTYPE html>
+<head>
+    <title>New Email</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-muted">
+  <a class="navbar-brand text-warning" href="../admin">
+    <%= image_tag("ACS-logo-og.png", width: "30", height: "30") %>
+         Admin Portal
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+
+    <ul class="navbar-nav navbar-nav-right ml-auto d-lg-flex align-items-center ">
+      <li class="nav-item">
+        <a class="nav-link" href=<%=url_for(:back)%>>Back</a>
+      </li>
+      <li class="nav-item dropdown-dark ">
+        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= image_tag("ACS-profile.png", width: "30", height: "30") %>
+        </a>       
+        <div class="dropdown-menu dropdown-menu-right .bg-light" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="profile">Profile</a>
+          <a class="dropdown-item" href=<%=root_path%>>Home</a>
+          <div class="dropdown-divider bg-dark"></div>
+          <a class="dropdown-item" href=<%=logout_path%>>Logout</a>
+        </div>
+      </li>
+  </div>
+</nav>
+
 <h1>Join our mailing list. Never miss an update</h1>
 
 <%= render 'form', email: @email %>
-
-<%= link_to 'Back', admin_emails_path %>
