--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,8 +19,10 @@
     padding: 0;
     height: 100%;
     background-color: #ffffff;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Verdana', sans-serif !important;
 }
+
+.navbar a:hover { background-color: rgba(255, 255, 255, 0) !important; }
 
 @viewport {
     width: device-width ;
