admin profile bug fixed

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -29,7 +29,7 @@
 
         
         <div class="dropdown-menu dropdown-menu-right .bg-light" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="profile">Profile</a>
+          <a class="dropdown-item" href=<%=admin_profile_path%>>Profile</a>
           <a class="dropdown-item" href=<%=root_path%>>Home</a>
           <div class="dropdown-divider bg-dark"></div>
           <a class="dropdown-item" href=<%=logout_path%>>Logout</a>
