--- a/app/views/acs_admins/admin.html.erb
+++ b/app/views/acs_admins/admin.html.erb
@@ -7,7 +7,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-muted">
-  <a class="navbar-brand text-warning" href="../admin">
+  <a class="navbar-brand text-warning" href=<%=admin_path%>>
     <%= image_tag("ACS-logo-og.png", width: "30", height: "30") %>
          Admin Portal
   </a>
@@ -25,7 +25,7 @@
           <%= image_tag("ACS-profile.png", width: "30", height: "30") %>
         </a>       
         <div class="dropdown-menu dropdown-menu-right .bg-light" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="profile">Profile</a>
+          <a class="dropdown-item" href=<%=admin_profile_path%>>Profile</a>
           <a class="dropdown-item" href=<%=root_path%>>Home</a>
           <div class="dropdown-divider bg-dark"></div>
           <a class="dropdown-item" href=<%=logout_path%>>Logout</a>
