--- a/app/views/members/admin.html.erb
+++ b/app/views/members/admin.html.erb
@@ -6,7 +6,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-muted">
-  <a class="navbar-brand text-warning" href="../admin">
+  <a class="navbar-brand text-warning" href=<%=admin_path%>>
     <%= image_tag("ACS-logo-og.png", width: "30", height: "30") %>
          Admin Portal
   </a>
@@ -17,14 +17,14 @@
 
     <ul class="navbar-nav navbar-nav-right ml-auto d-lg-flex align-items-center ">
       <li class="nav-item">
-        <a class="nav-link" href=<%=url_for(:back)%>>Back</a>
+        <a class="nav-link" href=<%=admin_path%>>Back</a>
       </li>
       <li class="nav-item dropdown-dark ">
         <a class="nav-link dropdown-toggle " href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%= image_tag("ACS-profile.png", width: "30", height: "30") %>
         </a>       
         <div class="dropdown-menu dropdown-menu-right .bg-light" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="profile">Profile</a>
+          <a class="dropdown-item" href=<%=admin_profile_path%>>Profile</a>
           <a class="dropdown-item" href=<%=root_path%>>Home</a>
           <div class="dropdown-divider bg-dark"></div>
           <a class="dropdown-item" href=<%=logout_path%>>Logout</a>
