--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -37,6 +37,7 @@
 
 <p id="notice"><%= notice %></p>
 
+<center>
 <div class="card">
   <h5 class="card-header">Profile : <%= current_user.student_id%></h5>
   <div class="card-body">
@@ -58,3 +59,6 @@
     <%= link_to 'Edit Profile',  edit_user_registration_path(current_user) %>
   </div>
 </div>
+
+
+</center>
