--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,15 +36,12 @@
 }
 
 
-// Place all the styles related to the calendarevents controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
 @media screen and (orientation:portrait) {
     .simple-calendar {
-        max-height: 80vh;
-        overflow-y: scroll;
-        border: 1px solid rgb(192, 192, 192);
         table {
+            max-height: 80%;
+            overflow-y: scroll;
+            border: 1px solid rgb(192, 192, 192);
         }
         
         tr {
