bugs fixed, site cleaned up

--- a/app/views/users/profilea.html.erb
+++ b/app/views/users/profilea.html.erb
@@ -18,7 +18,7 @@
 
     <ul class="navbar-nav navbar-nav-right ml-auto d-lg-flex align-items-center ">
       <li class="nav-item">
-        <a class="nav-link" href=<%=url_for(:back)%>>Back</a>
+        <a class="nav-link" href=<%=admin_profile_path%>>Back</a>
       </li>
       <li class="nav-item dropdown-dark ">
         <a class="nav-link dropdown-toggle " href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
