--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -33,10 +33,11 @@
       </li>
   </div>
 </nav>
-
+<center>
 <h1>Editing Meeting</h1>
 
 <%= render 'form', meeting: @meeting %>
 
 <%= link_to 'Show', @meeting %> |
 <%= link_to 'Back', admin_meetings_path %>
+</center>
