--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,45 @@
+<!DOCTYPE html>
+<head>
+    <title>Admin Portal | ACS Texas A&M</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-muted">
+  <a class="navbar-brand text-warning" href=<%=admin_path%>>
+    <%= image_tag("ACS-logo-og.png", width: "30", height: "30") %>
+         Admin Portal
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+
+    <ul class="navbar-nav navbar-nav-right ml-auto d-lg-flex align-items-center ">
+      <li class="nav-item">
+        <a class="nav-link" href=<%=admin_path%>>Back</a>
+      </li>
+      <li class="nav-item dropdown-dark ">
+        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= image_tag("ACS-profile.png", width: "30", height: "30") %>
+        </a>
+
+        
+        <div class="dropdown-menu dropdown-menu-right .bg-light" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href=<%=admin_profile_path%>>Profile</a>
+          <a class="dropdown-item" href=<%=root_path%>>Home</a>
+          <div class="dropdown-divider bg-dark"></div>
+          <a class="dropdown-item" href=<%=logout_path%>>Logout</a>
+        </div>
+      </li>
+  </div>
+</nav>
+
+
 <%= stylesheet_link_tag "registration.css" %>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+<center>
 <section class="vh-auto bg-image">
-  <a class="btn btn-danger mt-4" href="/home" role="button" style="color:black;">Back to Home Page</a>
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -31,10 +68,6 @@
                   <label class="form-label" for="form3Example1cg">Email</label>
                 </div>
 
-                <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-                  <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-                <% end %>
-
                 <div class="form-outline mb-4">
                   <%= f.password_field :password, autocomplete: "new-password", id: "form3Example3cg", class: "form-control form-control-lg" %>
                   <% if @minimum_password_length %>
@@ -58,17 +91,16 @@
                   <%= f.submit "Update", class: "btn btn-primary btn-lg" %>
                 </div>
 
-                <% if current_user && resource.email != "adm@n"%>
-                <div class="d-flex justify-content-center">
-                <p><%= button_to "Delete Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-primary btn-lg " %></p>
+              <% end %>
+
+              <% if current_user && @user.email != "adm@n"%>
+                <td><%= button_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure you want to delete this member?' } %></td>
                 </div>
                 <% end %>
 
                 <div class="d-flex justify-content-center">
                 <%= link_to "Back", :back %>
                 </div>
-
-              <% end %>
 
             </div>
           </div>
@@ -77,3 +109,4 @@
     </div>
   </div>
 </section>
+</center>
